api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-api-service
spec:
  selector:
    app: go-rest-api
  type: NodePort # Use LoadBalancer for cloud environments (AWS, GCP, Azure, etc.)
  ports:
  - protocol: TCP
    port: 80 # The port exposed within the cluster
    targetPort: 10000 # Match the container's listening port
